# ouly

./: .buildinfo  .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  PERFORMANCE.md  README.md  TBB_COMPARISON_SUMMARY.md  add_spdx.py  changelog.html  compile_commands.json  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  test_allocators.cpp  test_memory_allocators  test_memory_allocators.cpp  utf-8-test.txt
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  getting_started.doctree  index.doctree
.doctrees/api_reference/: index.doctree
.doctrees/examples/: index.doctree  unit_test_examples.doctree
.doctrees/performance/: index.doctree
.doctrees/tutorials/: containers_tutorial.doctree  ecs_tutorial.doctree  index.doctree  memory_management.doctree  scheduler_tutorial.doctree  serialization_tutorial.doctree
.doctrees/user_guide/: index.doctree
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cmake.yml  coverity.yml  nightly.yml  performance.yml  release.yml  test_and_coverage.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  oulyConfig.cmake
_sources/: changelog.rst.txt
_sources/api_reference/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/tutorials/: containers_tutorial.rst.txt  index.rst.txt  memory_management.rst.txt  serialization_tutorial.rst.txt
_static/: custom.css
api_reference/: index.html
benchmark-results/benchmark-results-gcc-14-Release/: benchmark_results_gcc-14_Release.json
debug_helpers/: pretty_printer_lldb.py
docs/: PERFORMANCE_BENCHMARKS.md  PERFORMANCE_WORKFLOW.md  WORKFLOW_STATUS.md  requirements.txt
docs/source/: allocators.rst  conf.py  containers.rst  contributing.rst  dsl.rst  ecs.rst  getting_started.rst  index.rst  scheduler.rst  serializers.rst  utils.rst
examples/: ecs_map_example.cpp  index.html  unit_test_examples.html
extended-benchmark-artifacts/: benchmark_results.json  gcc-14.2-03c1ad6a-46-scheduler_comparison.json  gcc-14.2-03c1ad6a-46-scheduler_comparison.txt  gcc-4.2-03c1ad6a-46-scheduler_comparison.json  gcc-4.2-03c1ad6a-46-scheduler_comparison.txt
include/acl/: acl_export_debug.hxx  alloc_desc.hpp  allocator.hpp  arena_allocator.hpp  array_types.hpp  basic_queue.hpp  binary_input_serializer.hpp  binary_output_serializer.hpp  blackboard.hpp  collection.hpp  default_allocator.hpp  dynamic_array.hpp  error_codes.hpp  export.hxx  greenboard.hpp  (+37 more)
performance/: index.html
performance-docs/: PERFORMANCE.md  performance_report.html
results/: benchmark_results.json  clang-18-008523d2-106-allocator_performance.json  clang-18-0639b2b9-100-allocator_performance.json  clang-18-08c4c46c-74-allocator_performance.json  clang-18-0c44a80d-63-allocator_performance.json  clang-18-10d42ca0-82-allocator_performance.json  clang-18-13a6b08e-116-allocator_performance.json  clang-18-14f3cfdf-128-allocator_performance.json  clang-18-162df8ac-118-allocator_performance.json  clang-18-17f0e13b-83-allocator_performance.json  clang-18-200a635c-130-allocator_performance.json  clang-18-20aa652b-126-allocator_performance.json  clang-18-381a3e22-72-allocator_performance.json  clang-18-3a10444a-112-allocator_performance.json  clang-18-42b51a1d-99-allocator_performance.json  clang-18-4320b3f6-117-allocator_performance.json  clang-18-4e2e343d-119-allocator_performance.json  clang-18-4f95f8ee-66-allocator_performance.json  clang-18-58f51bb9-123-allocator_performance.json  clang-18-5ab3cce2-76-allocator_performance.json  clang-18-5ab3cce2-77-allocator_performance.json  clang-18-63af0e7b-73-allocator_performance.json  clang-18-6517a10b-89-allocator_performance.json  clang-18-6979ae2c-94-allocator_performance.json  clang-18-6db0e6c0-101-allocator_performance.json  clang-18-8487a0f7-105-allocator_performance.json  clang-18-8713f508-124-allocator_performance.json  clang-18-8928ec1a-88-allocator_performance.json  clang-18-8c7aae3a-86-allocator_performance.json  clang-18-8dd72209-120-allocator_performance.json  clang-18-93b66ae0-85-allocator_performance.json  clang-18-97860a6f-75-allocator_performance.json  clang-18-99f9ecbc-80-allocator_performance.json  clang-18-9a4795dc-122-allocator_performance.json  clang-18-9c568419-127-allocator_performance.json  clang-18-aea35232-81-allocator_performance.json  clang-18-b32023a6-102-allocator_performance.json  clang-18-b4454bb1-92-allocator_performance.json  clang-18-b8e56daa-108-allocator_performance.json  clang-18-bad25b40-79-allocator_performance.json  (+535 more)
scripts/: README.md  analyze_performance.py  build_docs.sh  check_workflow.py  cleanup_old_results.py  generate_performance_report.py  process_performance_results.sh  run_benchmarks.sh  run_scheduler_benchmarks.sh  view_performance.sh  visualize_performance.py
tutorials/: containers_tutorial.html  ecs_tutorial.html  index.html  memory_management.html  scheduler_tutorial.html  serialization_tutorial.html
unit_tests/: CMakeLists.txt  arena_allocator.cpp  basic_queue.cpp  basic_tests.cpp  bench_arena_allocator.cpp  bench_coroutine_comparison.cpp  bench_main.cpp  bench_performance.cpp  bench_scheduler_comparison.cpp  bench_tbb_comparison.cpp  binary_serializer.cpp  binary_stream.cpp  blackboard.cpp  block_vector.cpp  bounded_bitset.cpp  coalescing_allocator.cpp  coalescing_defrag_allocator.cpp  collection.cpp  compacting_allocator.cpp  concurrent_queue.cpp  copy_tbb_libs.cmake  debug_auto_parallel_for.cpp  defrag_allocator.cpp  dynamic_array.cpp  dynamic_flow_graph_tests.cpp  ecs_collection_tests.cpp  ecs_components_iterators.cpp  ecs_comprehensive_tests.cpp  ecs_map_tests.cpp  ecs_registry_apis.cpp  ecs_tests.cpp  flow_graph_tests.cpp  greenboard.cpp  index_map.cpp  indexed_table.cpp  input_serializer.cpp  intrusive_list.cpp  inventory.cpp  linear_allocator.cpp  link_container.cpp  (+60 more)
user_guide/: index.html
visualizations/: PERFORMANCE.md  performance_report.html
(+683 files in other folders)
